--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <h1>Pablo Garcia's Portal</h1>
     <h2>About Me </h2>
     <p>I am a design engineer in Budapest, Hungary </p>
-    <p>I am currently working in Bosch KFT </p>
-    <p>I am intersted in web development, data analysis and coding</p>
+    <p>I am currently working in Bosch KFT since 2020</p>
+    <p>I am intersted in data analysis, web development and coding</p>
 
     <h2>Credentials and Portfolio</h2>
 
