--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>About Me </h2>
     <p>I am a design engineer in Budapest, Hungary </p>
     <p>I am currently working in Bosch KFT since 2020</p>
-    <p>I am intersted in data analysis, web development and coding</p>
+    <p>I am passionate about data analysis, web development and coding</p>
 
     <h2>Credentials and Portfolio</h2>
 
