Added experience in Nissan Mexicana

--- a/resume.html
+++ b/resume.html
@@ -38,13 +38,21 @@
           <li>Plastics Components</li>
         </ul>
   
-      <h3>CAD Engineer</h3>
+      <h3>Product Specialist</h3>
       <h4>Bosch Mexico, Toluca</h4>
       <h5>March 2016 - July 2020</h5>
         <ul>
           <li>CAD designer for Engine Cooling Fan and Shroud</li>
           <li>Applications and CAD tool development</li>
         </ul>
+
+        <h3>Design Engineer</h3>
+        <h4>Nissan Mexico, Toluca</h4>
+        <h5>September 2011 - February 2016</h5>
+          <ul>
+            <li>Designer for Body Components, Glass and Sunroof</li>
+            
+          </ul>
 
     <h2>Education</h2>
 
