Added Google IT Automation course

--- a/resume.html
+++ b/resume.html
@@ -54,6 +54,19 @@
             
           </ul>
 
+          <h2>Certifications and courses</h2>
+
+       
+          <h4>Google IT Automation with Python</h4>
+          <h5>August 2022t</h5>
+            <ul>
+              <li>Crash Course on Python</li>
+              <li>Using Python to Interact with the Operating System</li>
+              <li> Introduction to Git and GitHub</li>
+              <li> Troubleshooting and Debugging Techniques</li>
+              <li> Configuration Management and the Cloud</li>
+            </ul>
+
     <h2>Education</h2>
 
     <h3>UPIITA-IPN, Mexico</h3>
