Typo in the certifications area, date for the automation course

--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@
 
        
           <h4>Google IT Automation with Python</h4>
-          <h5>August 2022t</h5>
+          <h5>August 2022</h5>
             <ul>
               <li>Crash Course on Python</li>
               <li>Using Python to Interact with the Operating System</li>
