Added Certification for Data Analysis

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 
       <h2>Professional Experiences</h2>
 
-      <h3>Design Engineer</h3>
+      <h3>Mechanical Engineer</h3>
       <h4>Bosch KFT, Budapest, Hungary</h4>
       <h5>August 2020 - Present</h5>
         <ul>
@@ -57,7 +57,7 @@
           <h2>Certifications and courses</h2>
 
        
-          <h4>Google IT Automation with Python</h4>
+          <h3>Google IT Automation with Python</h3>
           <h5>August 2022</h5>
             <ul>
               <li>Crash Course on Python</li>
@@ -66,6 +66,19 @@
               <li> Troubleshooting and Debugging Techniques</li>
               <li> Configuration Management and the Cloud</li>
             </ul>
+
+            <h3>Google Data Analytics</h3>
+            <h5>August 2022</h5>
+              <ul>
+                <li>Foundations: Data, Data, Everywhere</li>
+                <li>Ask Questions to Make Data-Driven Decisions</li>
+                <li>Prepare Data for Exploration</li>
+                <li>Process Data from Dirty to Clean</li>
+                <li>Analyze Data to Answer Questions</li>
+                <li>Share Data Through the Art of Visualization</li>
+                <li>Process Data from Dirty to Clean</li>
+                <li>Data Analysis with R Programming</li>
+              </ul>
 
     <h2>Education</h2>
 
